--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </div>
       </div>
       <div class="pencils">
-        <img src="css/assets/basketgroup.png" alt="">
+        <img src="" alt="">
       </div>
 
     </section>
