Fixed pencil box issue.

--- a/index.html
+++ b/index.html
@@ -11,158 +11,204 @@
 
   </head>
   <body>
+    <div class="body-wrapper">
     <!-- Section 1 -->
-    <div class="section1">
-      <div class="sidebar">
-        <nav class="social">
-          <ul>
-            <li>
-              <a href="https://www.facebook.com/">facebook</a>
-            </li>
-            <li>
-              <a href="https://twitter.com/">twitter</a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/">instagram</a>
-            </li>
-            <li>
-              <a href="https://www.youtube.com/">youtube</a>
-            </li>
-          </ul>
-        </nav>
-          <div class="phoneicon">
-            <div class="circle">
-              <img src="css/assets/phoneicon.png" alt="phone icon">
-            </div>
-          </div>
-          <hr>
-      </div>
-      <section class="header">
-        <div class="unity">
-          <h1>unity</h1>
-          <nav class="menu">
-              <ul>
-                <li>
-                  <a href="#Home">Home</a>
-                </li>
-                <li>
-                  <a href="#About Us">About Us</a>
-                </li>
-                <li>
-                  <a href="#Services">Services</a>
-                </li>
-                <li>
-                  <a href="#Portfolio">Portfolio</a>
-                </li>
-                <li>
-                  <a href="#Blog">Blog</a>
-                </li>
-                <li>
-                  <a href="#Shop">Shop</a>
-                </li>
+      <div class="section1">
+        <div class="sidebar">
+          <nav class="social">
+            <ul>
+              <li>
+                <a href="https://www.facebook.com/">facebook</a>
+              </li>
+              <li>
+                <a href="https://twitter.com/">twitter</a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/">instagram</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/">youtube</a>
+              </li>
             </ul>
           </nav>
+            <div class="phoneicon">
+              <div class="circle">
+                <img src="css/assets/phoneicon.png" alt="phone icon">
+              </div>
+            </div>
         </div>
-        <div class="honor">
-          <h1>honor the details.</h1>
-          <p>we bring your products or services across in ways<br /> that make people feel good as they engage with your business</p>
-        </div>
-        <div class="scroll">
-          <div class="square">
-            <img src="css/assets/white-Rectangle-three-side.png" alt="white rectangle with three sides">
-            <h5>scroll</h5>
-            <img class="arrow" src="css/assets/white-down-arrow.png" alt="white arrow pointing down">
+        <section class="header">
+          <div class="unity">
+            <h1>unity</h1>
+            <nav class="menu">
+                <ul>
+                  <li>
+                    <a href="#Home">Home</a>
+                  </li>
+                  <li>
+                    <a href="#About Us">About Us</a>
+                  </li>
+                  <li>
+                    <a href="#Services">Services</a>
+                  </li>
+                  <li>
+                    <a href="#Portfolio">Portfolio</a>
+                  </li>
+                  <li>
+                    <a href="#Blog">Blog</a>
+                  </li>
+                  <li>
+                    <a href="#Shop">Shop</a>
+                  </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="honor">
+            <h1>honor the details.</h1>
+            <p>we bring your products or services across in ways<br /> that make people feel good as they engage with your business</p>
+          </div>
+          <div class="scroll">
+            <div class="square">
+              <img src="css/assets/white-Rectangle-three-side.png" alt="white rectangle with three sides">
+              <h5>scroll</h5>
+              <img class="arrow" src="css/assets/white-down-arrow.png" alt="white arrow pointing down">
+            </div>
+          </div>
+        </section>
+      </div>
+      <!-- Section 2 -->
+      <div class="section2">
+        <div class="overlap">
+          <div class="white-square">
+            <div class="number-1">
+              <h1>01.</h1>
+            </div>
+              <h1>invites<br /> active attention</h1>
+              <p>that's why we invent, and build digital campaigns</p>
+          </div>
+          <div class="paintbrushes">
+            <img src="css/assets/brushbox.png" alt="paintbrushes in a brushbox">
           </div>
         </div>
-      </section>
+        <article class="complexity">
+          <div class="complexity-description">
+            <h1 class="complexity-h1">Complexity<br /> should be<br /> secret</h1>
+            <p class="complexity-p">We know you have a story to tell. You want the world to embrace your<br /> incredible ideas, products, and services. Trouble is, you're not sure about the<br /> best way to get your message across. No problem. We do.</p>
+          </div>
+        </article>
+        <aside class="services">
+          <div class="column one">
+            <img src="css/assets/12.png" alt="branch nodes">
+            <h4>handmade layouts</h4>
+            <img src="css/assets/assets_0001s_0000s_0000s_0002_Rectangle-37.png" alt="short white line">
+            <p>Curabitur sit amet suscipit sagittis est.  Ut acet nisi porttitor vestibulum.  Donec a laoreet mi, at pretium lectus.</p>
+          </div>
+
+          <div class="column two">
+            <img src="css/assets/mortarboard.png" alt="mortarboard">
+            <h4>creative designs</h4>
+            <img src="css/assets/assets_0001s_0000s_0000s_0002_Rectangle-37.png" alt="short white line">
+            <p>Curabitur sit amet suscipit sagittis est.  Ut acet nisi porttitor vestibulum.  Donec a laoreet mi, at pretium lectus.</p>
+          </div>
+          <div class="column three">
+            <img src="css/assets/tools.png" alt="tools">
+            <h4>100% support</h4>
+            <img src="css/assets/assets_0001s_0000s_0000s_0002_Rectangle-37.png" alt="short white line">
+            <p>Curabitur sit amet suscipit sagittis est.  Ut acet nisi porttitor vestibulum.  Donec a laoreet mi, at pretium lectus.</p>
+          </div>
+          <div class="lines">
+            <img src="css/assets/assets_0001s_0000s_0001s_0000s_0001_Rounded-Rectangle-2.png" alt="rounded orange rectangular dash">
+            <img src="css/assets/assets_0001s_0000s_0001s_0000s_0000_Rounded-Rectangle-2-copy-2.png" alt="two white dashes">
+          </div>
+        </aside>
+      </div>
+      <div class="section3">
+        <div class="love">
+            <h1>We love our clients</h1>
+            <p>We take pride in delivering Intelligent Designs and Engaging Experiences for<br /> clients all over the World.</p>
+        </div>
+        <div class="video">
+          <img src="css/assets/roundButton.png" alt="round play button">
+          </video>
+        </div>
+      </div>
+
+      <div class="section4">
+        <div class="overlap">
+          <div class="black-square">
+            <div class="number-2">
+              <h1>02.</h1>
+            </div>
+              <h1>Honor<br /> the details</h1>
+              <p>For the global service design network</p>
+          </div>
+          <div class="pencils">
+            <img src="css/assets/allshadows.png" alt="shadows behind pencil basket">
+          </div>
+          <div class="pencils2">
+            <img src="css/assets/penbox.png" alt="basket full of colorful pencils">
+          </div>
+          <div class="black-square-copy">
+            <div class="what-we-do-picture">
+              <img src="css/assets/assets_0004s_0002s_0004_Layer-17.png" alt="man holding a leaf">
+            </div>
+            <div class="prevnext">
+              <img src="css/assets/prevnextpic.png" alt="">
+            </div>
+            <div class="purple-rectangle">
+              <img src="css/assets/assets_0004s_0001s_0003_Rectangle-42.png" alt="">
+              <h1>03.</h1>
+              <h4>What we do</h4>
+              <p>Although BLOC occupies a rebel position within their<br /> market of operations, their rebel nature was insufficiently<br /> manifest in their existing online presence.</p>
+            </div>
+          </div>
+          <div class="table">
+            <div class="row">
+              <div class="cell">
+                <div class="top-line">
+                  <img src="css/assets/assets_0004s_0000s_0003_Vector-Smart-Object.png" alt="headset icon">
+                  <p>campaign creative</p>
+                  <img src="css/assets/assets_0004s_0000s_0007_Vector-Smart-Object.png" alt="open box icon">
+                  <p>photography</p>
+                </div>
+                  <hr>
+                  <img src="css/assets/assets_0004s_0000s_0002_Vector-Smart-Object.png" alt="cupcake icon">
+                  <p>copywriting</p>
+                  <img src="css/assets/assets_0004s_0000s_0006_Vector-Smart-Object.png" alt="scale icon">
+                  <p>3d/vfx/post</p>
+                  <hr>
+                  <img src="css/assets/assets_0004s_0000s_0001_Vector-Smart-Object.png" alt="inset box with arrow to larger box">
+                  <p>product design</p>
+                  <img src="css/assets/assets_0004s_0000s_0005_Vector-Smart-Object.png" alt="easel icon">
+                  <p>digital outdoor</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="section-5">
+        <div class="snowscape">
+          <img src="css/assets/assets_0005s_0002s_0000_Layer-18.png" alt="">
+          <h1>global company with a local feel</h1>
+          <p>we help forward-thinking clients succeed in digital culture<br /> with work that invites active attention.</p>
+        </div>
+
+
+
+      </div>
+
+      <div class="6">
+
+      </div>
+
+      <div class="7">
+
+      </div>
+
+      <footer>
+
+      </footer>
     </div>
-    <!-- Section 2 -->
-    <section class="section2">
-      <div class="overlap">
-        <div class="white-square">
-          <div class="number-1">
-            <h1>01.</h1>
-          </div>
-            <h1>invites<br /> active attention</h1>
-            <p>that's why we invent, and build digital campaigns</p>
-        </div>
-        <div class="paintbrushes">
-          <img src="css/assets/brushbox.png" alt="paintbrushes in a brushbox">
-        </div>
-      </div>
-      <article class="complexity">
-        <div class="complexity-description">
-          <h1 class="complexity-h1">Complexity<br /> should be<br /> secret</h1>
-          <p class="complexity-p">We know you have a story to tell. You want the world to embrace your<br /> incredible ideas, products, and services. Trouble is, you're not sure about the<br /> best way to get your message across. No problem. We do.</p>
-        </div>
-      </article>
-      <aside class="services">
-        <div class="column one">
-          <img src="css/assets/12.png" alt="branch nodes">
-          <h4>handmade layouts</h4>
-          <img src="css/assets/assets_0001s_0000s_0000s_0002_Rectangle-37.png" alt="short white line">
-          <p>Curabitur sit amet suscipit sagittis est.  Ut acet nisi porttitor vestibulum.  Donec a laoreet mi, at pretium lectus.</p>
-        </div>
-
-        <div class="column two">
-          <img src="css/assets/mortarboard.png" alt="mortarboard">
-          <h4>creative designs</h4>
-          <img src="css/assets/assets_0001s_0000s_0000s_0002_Rectangle-37.png" alt="short white line">
-          <p>Curabitur sit amet suscipit sagittis est.  Ut acet nisi porttitor vestibulum.  Donec a laoreet mi, at pretium lectus.</p>
-        </div>
-        <div class="column three">
-          <img src="css/assets/tools.png" alt="tools">
-          <h4>100% support</h4>
-          <img src="css/assets/assets_0001s_0000s_0000s_0002_Rectangle-37.png" alt="short white line">
-          <p>Curabitur sit amet suscipit sagittis est.  Ut acet nisi porttitor vestibulum.  Donec a laoreet mi, at pretium lectus.</p>
-        </div>
-        <div class="lines">
-          <img src="css/assets/assets_0001s_0000s_0001s_0000s_0001_Rounded-Rectangle-2.png" alt="rounded orange rectangular dash">
-          <img src="css/assets/assets_0001s_0000s_0001s_0000s_0000_Rounded-Rectangle-2-copy-2.png" alt="two white dashes">
-        </div>
-      </aside>
-    </section>
-    <section class="section3">
-      <div class="love">
-          <h1>We love our clients</h1>
-          <p>We take pride in delivering Intelligent Designs and Engaging Experiences for<br /> clients all over the World.</p>
-      </div>
-      <div class="video">
-        <img src="css/assets/roundButton.png" alt="round play button">
-        </video>
-      </div>
-    </section>
-
-    <section class="section4">
-      <div class="overlap">
-        <div class="black-square">
-          <div class="number-2">
-            <h1>02.</h1>
-          </div>
-            <h1>Honor<br /> the details</h1>
-            <p>For the global service design network</p>
-          </div>
-      </div>
-      <div class="pencils">
-        <img src="" alt="">
-      </div>
-
-    </section>
-
-    <section class="5">
-
-    </section>
-
-    <section class="6">
-
-    </section>
-
-    <section class="7">
-
-    </section>
-
-    <footer>
-
-    </footer>
   </body>
 </html>
