--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <img src="css/assets/phoneicon.png" alt="phone icon">
               </div>
             </div>
+            <hr>
         </div>
         <section class="header">
           <div class="unity">
@@ -77,7 +78,7 @@
         </section>
       </div>
       <!-- Section 2 -->
-      <div class="section2">
+      <section class="section2">
         <div class="overlap">
           <div class="white-square">
             <div class="number-1">
@@ -121,8 +122,8 @@
             <img src="css/assets/assets_0001s_0000s_0001s_0000s_0000_Rounded-Rectangle-2-copy-2.png" alt="two white dashes">
           </div>
         </aside>
-      </div>
-      <div class="section3">
+      </section>
+      <section class="section3">
         <div class="love">
             <h1>We love our clients</h1>
             <p>We take pride in delivering Intelligent Designs and Engaging Experiences for<br /> clients all over the World.</p>
@@ -131,9 +132,9 @@
           <img src="css/assets/roundButton.png" alt="round play button">
           </video>
         </div>
-      </div>
+      </section>
 
-      <div class="section4">
+      <section class="section4">
         <div class="overlap">
           <div class="black-square">
             <div class="number-2">
@@ -162,49 +163,48 @@
               <p>Although BLOC occupies a rebel position within their<br /> market of operations, their rebel nature was insufficiently<br /> manifest in their existing online presence.</p>
             </div>
           </div>
-          <div class="table">
-            <div class="row">
-              <div class="cell">
-                <div class="top-line">
-                  <img src="css/assets/assets_0004s_0000s_0003_Vector-Smart-Object.png" alt="headset icon">
-                  <p>campaign creative</p>
-                  <img src="css/assets/assets_0004s_0000s_0007_Vector-Smart-Object.png" alt="open box icon">
-                  <p>photography</p>
+            <div class="table">
+              <div class="row">
+                <div class="cell">
+                  <div class="top-line">
+                    <img src="css/assets/assets_0004s_0000s_0003_Vector-Smart-Object.png" alt="headset icon">
+                    <p>campaign creative</p>
+                    <img src="css/assets/assets_0004s_0000s_0007_Vector-Smart-Object.png" alt="open box icon">
+                    <p>photography</p>
+                  </div>
+                    <hr>
+                    <img src="css/assets/assets_0004s_0000s_0002_Vector-Smart-Object.png" alt="cupcake icon">
+                    <p>copywriting</p>
+                    <img src="css/assets/assets_0004s_0000s_0006_Vector-Smart-Object.png" alt="scale icon">
+                    <p>3d/vfx/post</p>
+                    <hr>
+                    <img src="css/assets/assets_0004s_0000s_0001_Vector-Smart-Object.png" alt="inset box with arrow to larger box">
+                    <p>product design</p>
+                    <img src="css/assets/assets_0004s_0000s_0005_Vector-Smart-Object.png" alt="easel icon">
+                    <p>digital outdoor</p>
                 </div>
-                  <hr>
-                  <img src="css/assets/assets_0004s_0000s_0002_Vector-Smart-Object.png" alt="cupcake icon">
-                  <p>copywriting</p>
-                  <img src="css/assets/assets_0004s_0000s_0006_Vector-Smart-Object.png" alt="scale icon">
-                  <p>3d/vfx/post</p>
-                  <hr>
-                  <img src="css/assets/assets_0004s_0000s_0001_Vector-Smart-Object.png" alt="inset box with arrow to larger box">
-                  <p>product design</p>
-                  <img src="css/assets/assets_0004s_0000s_0005_Vector-Smart-Object.png" alt="easel icon">
-                  <p>digital outdoor</p>
               </div>
             </div>
           </div>
-        </div>
-      </div>
+      </section>
 
-      <div class="section-5">
-        <div class="snowscape">
-          <img src="css/assets/assets_0005s_0002s_0000_Layer-18.png" alt="">
-          <h1>global company with a local feel</h1>
+      <section class="section-5">
+        <div class="global">
+          <h1>global company with a local feel.</h1>
           <p>we help forward-thinking clients succeed in digital culture<br /> with work that invites active attention.</p>
+
+
         </div>
+        <img src="css/assets/assets_0005s_0002s_0000_Layer-18.png" alt="snowscape">" alt="">
+      </section>
 
+      <section class="6">
 
+      </section>
 
-      </div>
+      <section class="7">
 
-      <div class="6">
-
-      </div>
-
-      <div class="7">
-
-      </div>
+      </section>
 
       <footer>
 
