--- a/index.html
+++ b/index.html
@@ -194,25 +194,56 @@
         <h1>global company with a local feel.</h1>
         <p>we help forward-thinking clients succeed in digital culture<br /> with work that invites active attention.</p>
       </div>
-      <div class="customers">
-        
-      <p>What our Customers are saying</p>
-
-      <div>
-      <div class="testimonials">
+      <div class="vertical-line">
+        <img src="css/assets/assets_0005s_0000s_0000_Rectangle-45.png" alt="">
+      </div>
+        <h5>What our Customers are saying</h5>
+      <div class="testimonial-container">
         <div class="test-box one">
-
+          <p>"Thanks so much for the awesome customer service.  So many companies, large and small, have a lot to learn from you. Great job!"</p>
+          <p>Gregory Bradley</p>
+          <p>New York - USA</p>
         </div>
-        <div class="test-box second">
-
+        <div class="test-box two">
+          <p>"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
+          <p>Jonathan Kraus</p>
+          <p>Berlin - Germany</p>
         </div>
-        <div class="test-box one">
-
+        <div class="test-box three">
+          <p>"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
+          <p>Caroline De Smet</p>
+          <p>Brussels - Belgium</p>
         </div>
       </div>
     </section>
 
     <section class="section-6">
+      <section class="hero section-6">
+
+      <div class="testimonial-container">
+
+        <div class="columns black">
+          <p class="white">"Thanks so much for the awesome customer service. So many companies, large and small, have a lot to learn from you. Great job!"</p>
+          <p>Gregory Bradley</p>
+          <p class="gray">New York - USA</p>
+        </div>
+
+        <div class="columns white">
+          <p class="purple">"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
+          <p class="yellow">Jonathan Kraus</p>
+          <p class="yellow">Berlin - Germany</p>
+        </div>
+
+        <div class="columns black">
+          <p class="white">"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
+          <p>Caroline De Smet</p>
+          <p class="gray">Brussels - Belgium</p>
+        </div>
+
+      </div>
+
+    </section>
+
     </section>
 
     <section class="7">
