--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             <img src="css/assets/phoneicon.png" alt="phone icon">
           </div>
         </div>
-        <hr>
       </div>
       <section class="header">
         <div class="unity">
@@ -195,60 +194,37 @@
         <p>we help forward-thinking clients succeed in digital culture<br /> with work that invites active attention.</p>
       </div>
       <div class="vertical-line">
-        <img src="css/assets/assets_0005s_0000s_0000_Rectangle-45.png" alt="">
+        <img src="css/assets/assets_0005s_0000s_0000_Rectangle-45.png" alt="black vertical line">
       </div>
         <h5>What our Customers are saying</h5>
-      <div class="testimonial-container">
+      <div class="testimonials">
         <div class="test-box one">
-          <p>"Thanks so much for the awesome customer service.  So many companies, large and small, have a lot to learn from you. Great job!"</p>
-          <p>Gregory Bradley</p>
-          <p>New York - USA</p>
+          <img src="css/assets/assets_0005s_0001s_0002s_0001_Layer-40.png" alt="male customer photo">
+          <img src="css/assets/assets_0005s_0001s_0002s_0000_.png" alt="five yellow stars">
+          <p class="quote">"Thanks so much for the awesome customer service.  So many companies, large and small, have a lot to learn from you. Great job!"</p>
+          <p class="name">Gregory Bradley</p>
+          <p class="location">New York - USA</p>
         </div>
         <div class="test-box two">
-          <p>"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
-          <p>Jonathan Kraus</p>
-          <p>Berlin - Germany</p>
+          <img src="css/assets/assets_0005s_0001s_0001s_0001_Layer-42.png" alt="male customer photo">
+          <img src="css/assets/assets_0005s_0001s_0001s_0000_.png" alt="five ">
+          <p class="quote">"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
+          <p=class="name">Jonathan Kraus</p>
+          <p class="location">Berlin - Germany</p>
         </div>
         <div class="test-box three">
-          <p>"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
-          <p>Caroline De Smet</p>
-          <p>Brussels - Belgium</p>
+          <img src="css/assets/assets_0005s_0001s_0000s_0001_Layer-43.png" alt="female customer photo">
+          <img src="css/assets/assets_0005s_0001s_0002s_0000_.png" alt="five yellow stars">
+          <p=class="quote">"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
+          <p class="name"></p>
+          <p class="location">Berlin - Germany</p>
         </div>
       </div>
     </section>
 
     <section class="section-6">
-      <section class="hero section-6">
-
-      <div class="testimonial-container">
-
-        <div class="columns black">
-          <p class="white">"Thanks so much for the awesome customer service. So many companies, large and small, have a lot to learn from you. Great job!"</p>
-          <p>Gregory Bradley</p>
-          <p class="gray">New York - USA</p>
-        </div>
-
-        <div class="columns white">
-          <p class="purple">"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
-          <p class="yellow">Jonathan Kraus</p>
-          <p class="yellow">Berlin - Germany</p>
-        </div>
-
-        <div class="columns black">
-          <p class="white">"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
-          <p>Caroline De Smet</p>
-          <p class="gray">Brussels - Belgium</p>
-        </div>
-
-      </div>
-
     </section>
 
-    </section>
-
-    <section class="7">
-
-    </section>
 
     <footer>
 
