--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
           <p class="complexity-p">We know you have a story to tell. You want the world to embrace your<br /> incredible ideas, products, and services. Trouble is, you're not sure about the<br /> best way to get your message across. No problem. We do.</p>
         </div>
       </article>
-      <aside class="services">
-        <div class="column one">
+      <div>
+        <div class="column">
           <img src="css/assets/12.png" alt="branch nodes">
           <h4>handmade layouts</h4>
           <img src="css/assets/assets_0001s_0000s_0000s_0002_Rectangle-37.png" alt="short white line">
           <p>Curabitur sit amet suscipit sagittis est. Ut acet nisi porttitor vestibulum. Donec a laoreet mi, at pretium lectus.</p>
         </div>
 
-        <div class="column two">
+        <div class="column">
           <img src="css/assets/mortarboard.png" alt="mortarboard">
           <h4>creative designs</h4>
           <img src="css/assets/assets_0001s_0000s_0000s_0002_Rectangle-37.png" alt="short white line">
           <p>Curabitur sit amet suscipit sagittis est. Ut acet nisi porttitor vestibulum. Donec a laoreet mi, at pretium lectus.</p>
         </div>
-        <div class="column three">
+        <div class="column">
           <img src="css/assets/tools.png" alt="tools">
           <h4>100% support</h4>
           <img src="css/assets/assets_0001s_0000s_0000s_0002_Rectangle-37.png" alt="short white line">
@@ -122,8 +122,9 @@
           <img src="css/assets/assets_0001s_0000s_0001s_0000s_0001_Rounded-Rectangle-2.png" alt="rounded orange rectangular dash">
           <img src="css/assets/assets_0001s_0000s_0001s_0000s_0000_Rounded-Rectangle-2-copy-2.png" alt="two white dashes">
         </div>
-      </aside>
+      </div>
     </section>
+    <!-- Section 3 -->
     <section class="section3">
       <div class="love">
         <h1>We love our clients</h1>
@@ -134,7 +135,7 @@
         </video>
       </div>
     </section>
-
+<!-- Section 4 -->
     <section class="section4">
       <div class="overlap">
         <div class="black-square">
@@ -174,20 +175,21 @@
                 <p>photography</p>
               </div>
               <hr>
-                <img src="css/assets/assets_0004s_0000s_0002_Vector-Smart-Object.png" alt="cupcake icon">
-                <p>copywriting</p>
-                <img src="css/assets/assets_0004s_0000s_0006_Vector-Smart-Object.png" alt="scale icon">
-                <p>3d/vfx/post</p>
-                <hr>
-                <img src="css/assets/assets_0004s_0000s_0001_Vector-Smart-Object.png" alt="inset box with arrow to larger box">
-                <p>product design</p>
-                <img src="css/assets/assets_0004s_0000s_0005_Vector-Smart-Object.png" alt="easel icon">
-                <p>digital outdoor</p>
+              <img src="css/assets/assets_0004s_0000s_0002_Vector-Smart-Object.png" alt="cupcake icon">
+              <p>copywriting</p>
+              <img src="css/assets/assets_0004s_0000s_0006_Vector-Smart-Object.png" alt="scale icon">
+              <p>3d/vfx/post</p>
+              <hr>
+              <img src="css/assets/assets_0004s_0000s_0001_Vector-Smart-Object.png" alt="inset box with arrow to larger box">
+              <p>product design</p>
+              <img src="css/assets/assets_0004s_0000s_0005_Vector-Smart-Object.png" alt="easel icon">
+              <p>digital outdoor</p>
             </div>
           </div>
         </div>
       </div>
     </section>
+    <!-- Section 5 -->
     <section class="section-5">
       <div class="global">
         <h1>global company with a local feel.</h1>
@@ -197,39 +199,33 @@
         <img src="css/assets/assets_0005s_0000s_0000_Rectangle-45.png" alt="black vertical line">
       </div>
         <h5>What our Customers are saying</h5>
-      <div class="testimonials">
-        <div class="test-box one">
-          <img src="css/assets/assets_0005s_0001s_0002s_0001_Layer-40.png" alt="male customer photo">
-          <img src="css/assets/assets_0005s_0001s_0002s_0000_.png" alt="five yellow stars">
-          <p class="quote">"Thanks so much for the awesome customer service.  So many companies, large and small, have a lot to learn from you. Great job!"</p>
-          <p class="name">Gregory Bradley</p>
-          <p class="location">New York - USA</p>
+      <div class="testimonial-container">
+        <div class="testimonial odd left">
+          <img class="avatar" src="css/assets/assets_0005s_0001s_0002s_0001_Layer-40.png" alt="male customer photo">
+          <img class="stars"src="css/assets/assets_0005s_0001s_0002s_0000_.png" alt="five yellow stars">
+          <p class="blurb">"Thanks so much for the awesome<br /> customer service.  So many companies,<br /> large and small, have a lot to learn from<br /> you. Great job!"</p>
+          <p class="bold">Gregory Bradley</p><br />
+          <p class="gray uppercase">New York-USA</p>
         </div>
-        <div class="test-box two">
-          <img src="css/assets/assets_0005s_0001s_0001s_0001_Layer-42.png" alt="male customer photo">
-          <img src="css/assets/assets_0005s_0001s_0001s_0000_.png" alt="five ">
-          <p class="quote">"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
-          <p=class="name">Jonathan Kraus</p>
-          <p class="location">Berlin - Germany</p>
+        <div class="testimonial even center">
+          <img class="avatar" src="css/assets/assets_0005s_0001s_0001s_0001_Layer-42.png" alt="male customer photo">
+          <img class="stars" src="css/assets/assets_0005s_0001s_0001s_0000_.png" alt="five ">
+          <p class="blurb">"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
+          <p class="bold gold">Jonathan Kraus</p><br />
+          <p class="gold uppercase">Berlin-Germany</p>
         </div>
-        <div class="test-box three">
-          <img src="css/assets/assets_0005s_0001s_0000s_0001_Layer-43.png" alt="female customer photo">
-          <img src="css/assets/assets_0005s_0001s_0002s_0000_.png" alt="five yellow stars">
-          <p=class="quote">"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
-          <p class="name"></p>
-          <p class="location">Berlin - Germany</p>
+        <div class="testimonial odd right">
+          <img class="avatar"  src="css/assets/assets_0005s_0001s_0000s_0001_Layer-43.png" alt="female customer photo">
+          <img class="stars" src="css/assets/assets_0005s_0001s_0002s_0000_.png" alt="">
+          <p class="blurb">"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
+          <p class="bold">Caroline de Smet</p><br />
+          <p class="gray uppercase">Brussels-Belgium</p>
         </div>
       </div>
     </section>
-
-    <section class="section-6">
-    </section>
-
-
     <footer>
 
     </footer>
   </div>
 </body>
-
 </html>
