Changing # to javascript:void(0).  Sorry, I forgot to do this before!

--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
           <nav class="menu">
             <ul>
               <li>
-                <a href="#Home">Home</a>
+                <a href="javascript:void(0)">Home</a>
               </li>
               <li>
-                <a href="#About Us">About Us</a>
+                <a href="javascript:void(0)">About Us</a>
               </li>
               <li>
-                <a href="#Services">Services</a>
+                <a href="javascript:void(0)">Services</a>
               </li>
               <li>
-                <a href="#Portfolio">Portfolio</a>
+                <a href="javascript:void(0)">Portfolio</a>
               </li>
               <li>
-                <a href="#Blog">Blog</a>
+                <a href="javascript:void(0)">Blog</a>
               </li>
               <li>
-                <a href="#Shop">Shop</a>
+                <a href="javascript:void(0)">Shop</a>
               </li>
             </ul>
           </nav>
