Added bootstrap to the css folder, changed name of body-wrapper div to container-fluid, and removed previously hardcoded widths for .body-wrapper class

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Prototype</title>
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="body-wrapper">
+  <div class="container-fluid">
     <!-- Section 1 -->
     <div class="section1">
       <div class="sidebar">
