Started to refactor previous prototype with bootstrap.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Prototype</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link rel="stylesheet" href="css/fonts/css/fonts.css">
 
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Prototype</title>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+  <link rel="stylesheet" href="css/fonts/css/fonts.css">
+
+</head>
+
+<body>
+  <div class="container-fluid">
     <!-- Section 1 -->
-    <div class="section1">
-      <div class="sidebar">
+    <div class="column-wrapper row">
+      <div class="col-md-1">
         <nav class="social">
           <ul>
             <li>
@@ -30,36 +33,35 @@
             </li>
           </ul>
         </nav>
-          <div class="phoneicon">
-            <div class="circle">
-              <img src="css/assets/phoneicon.png" alt="phone icon">
-            </div>
+        <div class="phoneicon">
+          <div class="circle">
+            <img src="css/assets/phoneicon.png" alt="phone icon">
           </div>
-          <hr>
+        </div>
       </div>
-      <section class="header">
+      <div class="col-md-11">
         <div class="unity">
           <h1>unity</h1>
           <nav class="menu">
-              <ul>
-                <li>
-                  <a href="#Home">Home</a>
-                </li>
-                <li>
-                  <a href="#About Us">About Us</a>
-                </li>
-                <li>
-                  <a href="#Services">Services</a>
-                </li>
-                <li>
-                  <a href="#Portfolio">Portfolio</a>
-                </li>
-                <li>
-                  <a href="#Blog">Blog</a>
-                </li>
-                <li>
-                  <a href="#Shop">Shop</a>
-                </li>
+            <ul>
+              <li>
+                <a href="javascript:void(0)">Home</a>
+              </li>
+              <li>
+                <a href="javascript:void(0)">About Us</a>
+              </li>
+              <li>
+                <a href="javascript:void(0)">Services</a>
+              </li>
+              <li>
+                <a href="javascript:void(0)">Portfolio</a>
+              </li>
+              <li>
+                <a href="javascript:void(0)">Blog</a>
+              </li>
+              <li>
+                <a href="javascript:void(0)">Shop</a>
+              </li>
             </ul>
           </nav>
         </div>
@@ -83,8 +85,8 @@
           <div class="number-1">
             <h1>01.</h1>
           </div>
-            <h1>invites<br /> active attention</h1>
-            <p>that's why we invent, and build digital campaigns</p>
+          <h1>invites<br /> active attention</h1>
+          <p>that's why we invent, and build digital campaigns</p>
         </div>
         <div class="paintbrushes">
           <img src="css/assets/brushbox.png" alt="paintbrushes in a brushbox">
@@ -96,73 +98,134 @@
           <p class="complexity-p">We know you have a story to tell. You want the world to embrace your<br /> incredible ideas, products, and services. Trouble is, you're not sure about the<br /> best way to get your message across. No problem. We do.</p>
         </div>
       </article>
-      <aside class="services">
-        <div class="column one">
+      <div>
+        <div class="column">
           <img src="css/assets/12.png" alt="branch nodes">
           <h4>handmade layouts</h4>
           <img src="css/assets/assets_0001s_0000s_0000s_0002_Rectangle-37.png" alt="short white line">
-          <p>Curabitur sit amet suscipit sagittis est.  Ut acet nisi porttitor vestibulum.  Donec a laoreet mi, at pretium lectus.</p>
+          <p>Curabitur sit amet suscipit sagittis est. Ut acet nisi porttitor vestibulum. Donec a laoreet mi, at pretium lectus.</p>
         </div>
 
-        <div class="column two">
+        <div class="column">
           <img src="css/assets/mortarboard.png" alt="mortarboard">
           <h4>creative designs</h4>
           <img src="css/assets/assets_0001s_0000s_0000s_0002_Rectangle-37.png" alt="short white line">
-          <p>Curabitur sit amet suscipit sagittis est.  Ut acet nisi porttitor vestibulum.  Donec a laoreet mi, at pretium lectus.</p>
+          <p>Curabitur sit amet suscipit sagittis est. Ut acet nisi porttitor vestibulum. Donec a laoreet mi, at pretium lectus.</p>
         </div>
-        <div class="column three">
+        <div class="column">
           <img src="css/assets/tools.png" alt="tools">
           <h4>100% support</h4>
           <img src="css/assets/assets_0001s_0000s_0000s_0002_Rectangle-37.png" alt="short white line">
-          <p>Curabitur sit amet suscipit sagittis est.  Ut acet nisi porttitor vestibulum.  Donec a laoreet mi, at pretium lectus.</p>
+          <p>Curabitur sit amet suscipit sagittis est. Ut acet nisi porttitor vestibulum. Donec a laoreet mi, at pretium lectus.</p>
         </div>
         <div class="lines">
           <img src="css/assets/assets_0001s_0000s_0001s_0000s_0001_Rounded-Rectangle-2.png" alt="rounded orange rectangular dash">
           <img src="css/assets/assets_0001s_0000s_0001s_0000s_0000_Rounded-Rectangle-2-copy-2.png" alt="two white dashes">
         </div>
-      </aside>
+      </div>
     </section>
+    <!-- Section 3 -->
     <section class="section3">
       <div class="love">
-          <h1>We love our clients</h1>
-          <p>We take pride in delivering Intelligent Designs and Engaging Experiences for<br /> clients all over the World.</p>
+        <h1>We love our clients</h1>
+        <p>We take pride in delivering Intelligent Designs and Engaging Experiences for<br /> clients all over the World.</p>
       </div>
       <div class="video">
         <img src="css/assets/roundButton.png" alt="round play button">
         </video>
       </div>
     </section>
-
+<!-- Section 4 -->
     <section class="section4">
       <div class="overlap">
         <div class="black-square">
           <div class="number-2">
             <h1>02.</h1>
           </div>
-            <h1>Honor<br /> the details</h1>
-            <p>For the global service design network</p>
+          <h1>Honor<br /> the details</h1>
+          <p>For the global service design network</p>
+        </div>
+        <div class="pencils">
+          <img src="css/assets/allshadows.png" alt="shadows behind pencil basket">
+        </div>
+        <div class="pencils2">
+          <img src="css/assets/penbox.png" alt="basket full of colorful pencils">
+        </div>
+        <div class="black-square-copy">
+          <div class="what-we-do-picture">
+            <img src="css/assets/assets_0004s_0002s_0004_Layer-17.png" alt="man holding a leaf">
           </div>
+          <div class="prevnext">
+            <img src="css/assets/prevnextpic.png" alt="">
+          </div>
+          <div class="purple-rectangle">
+            <img src="css/assets/assets_0004s_0001s_0003_Rectangle-42.png" alt="">
+            <h1>03.</h1>
+            <h4>What we do</h4>
+            <p>Although BLOC occupies a rebel position within their<br /> market of operations, their rebel nature was insufficiently<br /> manifest in their existing online presence.</p>
+          </div>
+        </div>
+        <div class="table">
+          <div class="row">
+            <div class="cell">
+              <div class="top-line">
+                <img src="css/assets/assets_0004s_0000s_0003_Vector-Smart-Object.png" alt="headset icon">
+                <p>campaign creative</p>
+                <img src="css/assets/assets_0004s_0000s_0007_Vector-Smart-Object.png" alt="open box icon">
+                <p>photography</p>
+              </div>
+              <hr>
+              <img src="css/assets/assets_0004s_0000s_0002_Vector-Smart-Object.png" alt="cupcake icon">
+              <p>copywriting</p>
+              <img src="css/assets/assets_0004s_0000s_0006_Vector-Smart-Object.png" alt="scale icon">
+              <p>3d/vfx/post</p>
+              <hr>
+              <img src="css/assets/assets_0004s_0000s_0001_Vector-Smart-Object.png" alt="inset box with arrow to larger box">
+              <p>product design</p>
+              <img src="css/assets/assets_0004s_0000s_0005_Vector-Smart-Object.png" alt="easel icon">
+              <p>digital outdoor</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="pencils">
-        <img src="css/assets/basketgroup.png" alt="">
+    </section>
+    <!-- Section 5 -->
+    <section class="section-5">
+      <div class="global">
+        <h1>global company with a local feel.</h1>
+        <p>we help forward-thinking clients succeed in digital culture<br /> with work that invites active attention.</p>
       </div>
-
+      <div class="vertical-line">
+        <img src="css/assets/assets_0005s_0000s_0000_Rectangle-45.png" alt="black vertical line">
+      </div>
+        <h5>What our Customers are saying</h5>
+      <div class="testimonial-container">
+        <div class="testimonial odd left">
+          <img class="avatar" src="css/assets/assets_0005s_0001s_0002s_0001_Layer-40.png" alt="male customer photo">
+          <img class="stars"src="css/assets/assets_0005s_0001s_0002s_0000_.png" alt="five yellow stars">
+          <p class="blurb">"Thanks so much for the awesome<br /> customer service.  So many companies,<br /> large and small, have a lot to learn from<br /> you. Great job!"</p>
+          <p class="bold">Gregory Bradley</p><br />
+          <p class="gray uppercase">New York-USA</p>
+        </div>
+        <div class="testimonial even center">
+          <img class="avatar" src="css/assets/assets_0005s_0001s_0001s_0001_Layer-42.png" alt="male customer photo">
+          <img class="stars" src="css/assets/assets_0005s_0001s_0001s_0000_.png" alt="five ">
+          <p class="blurb">"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
+          <p class="bold gold">Jonathan Kraus</p><br />
+          <p class="gold uppercase">Berlin-Germany</p>
+        </div>
+        <div class="testimonial odd right">
+          <img class="avatar"  src="css/assets/assets_0005s_0001s_0000s_0001_Layer-43.png" alt="female customer photo">
+          <img class="stars" src="css/assets/assets_0005s_0001s_0002s_0000_.png" alt="">
+          <p class="blurb">"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
+          <p class="bold">Caroline de Smet</p><br />
+          <p class="gray uppercase">Brussels-Belgium</p>
+        </div>
+      </div>
     </section>
-
-    <section class="5">
-
-    </section>
-
-    <section class="6">
-
-    </section>
-
-    <section class="7">
-
-    </section>
-
     <footer>
 
     </footer>
-  </body>
+  </div>
+</body>
 </html>
