--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <title></title>
     <link rel="stylesheet" href="css/bootstrap copy.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/fontello.css">
   </head>
   <body>
     <!-- Fluid wrapper for the whole page -->
     <div class="container-fluid">
       <!-- Header row -->
       <div class="header-container row">
-        <div class="logo col-md-4"><img src="img/Logo.png" alt="NortSea Logo"/img>
+        <div class="logo col-md-3"><img src="img/Logo.png" alt="NortSea Logo"/img>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-9">
           <div class="row">
-            <div class="col"><img src="img/mailicon.png" alt="envelope icon"/img>
+            <div class="col">
+              <i class="demo-icon icon-mail"></i>
               <link rel="stylesheet" href="javascript: void(0)">info@hellohelp.com
             </div>
             <div class="col">
-              <img src="img/phoneicon.png" alt="phone icon">+440 875369208
+              <i class="demo-icon icon-phone"></i>+440 875369208
             </div>
             <div class="col">
               <button type="button" class="btn btn-outline-secondary">Log-in</button>
@@ -37,13 +39,16 @@
               </div>
             </div>
             <div class="col">
-              <img src="img/facebook.png" alt="facebook logo">
+              <i class="demo-icon icon-facebook-squared"></i>
               <img src="img/twitter.png" alt="twitter logo">
-              <img src="img/instagram.png" alt="instagram logo">
-              <img src="img/messageicon.png" alt="envelope icon">
+              <i class="demo-icon icon-instagram"></i>
+              <i class="demo-icon icon-mail"></i>
             </div>
           </div>
-          <div class="row">
+        </div>
+      </div>
+          <!-- Nav Bar Row -->
+          <!-- <div class="row">
             <div class="col">
               <a href="#Home"></a>Home
             </div>
@@ -81,7 +86,230 @@
               <a href="#Contact"></a>Contact
             </div>
             <div class="col">
-              <img src="img/searchicon.png" alt="magnifying glass icon">
+              <i class="demo-icon icon-search"></i>
+            </div>
+          </div>
+        </div>
+      </div> -->
+        <div class="row">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About Us</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Services
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </div>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Products
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Gallery</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="demo-icon icon-search"></i></button>
+              </form>
+            </div>
+          </nav>
+        </div>
+      <!-- Carousel, weather, gallery, tour and booking section -->
+      <div class="row"><!--Do I need this row container and following col-md-11?-->
+        <div class="col-md-11">
+          <!-- Carousel -->
+          <div class="carousel row">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="..." alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="..." alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="..." alt="Third slide">
+                </div>
+              </div>
+              <!-- Arrows for carousel - Ask Kyle if we need it? Or if removing this will break it? -->
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+            <!-- Text for on top of carousel - Ask Kyle how to structure this area -->
+            <h1>35% Sale</h1>
+            <h2>You enter summer with refreshing rates</h2>
+            <button type="button" class="btn btn-light">Explore it</button>
+        </div>
+        <!-- Weather, Gallery, and Tour Column - Add links after I collect pics -->
+        <div class="col-md-1">
+          <div class="row">
+            <h1>Greece</h1>
+            <i class="demo-icon icon-sun"></i>
+            <p>26°/19°</p>
+            <p>Sunny</p>
+          </div>
+          <div class="row">
+            <h1>Gallery</h1>
+            <i class="demo-icon icon-picture"></i>
+          </div>
+          <div class="row">
+            <h1>360 Virtual Tour</h1>
+            <img src="img/panorama.svg" alt="panorama icon">
+          </div>
+        </div>
+        <!-- Hotel/booking section - Figure out if I need two rows here or not, also what spacing to use -->
+        <div class="row">
+          <div class="col-md-12">
+            <i class="demo-icon icon-hospital"></i>
+            <h1>Hotel</h1>
+            <div class="row">
+              <div class="col-md-2">Arrival
+                <div class="container">
+                  <div class="row">
+                    <div class='col-sm-6'>
+                        <div class="form-group">
+                            <div class='input-group date' id='datetimepicker1'>
+                                <input type='text' class="form-control" />
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar"><i class="demo-icon icon-calendar"></i></span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <script type="text/javascript">
+                        $(function () {
+                            $('#datetimepicker1').datetimepicker();
+                        });
+                    </script>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2">Going
+                <div class="container">
+                  <div class="row">
+                      <div class='col-sm-6'>
+                          <div class="form-group">
+                              <div class='input-group date' id='datetimepicker1'>
+                                  <input type='text' class="form-control" />
+                                  <span class="input-group-addon">
+                                      <span class="glyphicon glyphicon-calendar"><i class="demo-icon icon-calendar"></i></span>
+                                  </span>
+                              </div>
+                          </div>
+                      </div>
+                      <script type="text/javascript">
+                          $(function () {
+                              $('#datetimepicker1').datetimepicker();
+                          });
+                      </script>
+                  </div>
+              </div>
+              </div>
+              <div class="col">Room
+                <div class="input-group">
+                  <input type="text" placeholder="2" class="form-control" aria-label="Text input with dropdown button">
+                  <div class="input-group-append">
+                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                    <div class="dropdown-menu">
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                      <div role="separator" class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#">Separated link</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">Person
+                <div class="input-group">
+                  <input type="text" placeholder="2" class="form-control" aria-label="Text input with dropdown button">
+                  <div class="input-group-append">
+                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                    <div class="dropdown-menu">
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                      <div role="separator" class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#">Separated link</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">Child
+                <div class="input-group">
+                  <input type="text" placeholder="2" class="form-control" aria-label="Text input with dropdown button">
+                  <div class="input-group-append">
+                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                    <div class="dropdown-menu">
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                      <div role="separator" class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#">Separated link</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">Day
+                <div class="input-group">
+                  <input type="text" placeholder="2" class="form-control" aria-label="Text input with dropdown button">
+                  <div class="input-group-append">
+                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                    <div class="dropdown-menu">
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                      <div role="separator" class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#">Separated link</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <button type="button" name="button">Search Book</button>
+              </div>
             </div>
           </div>
         </div>
