Removes Javasript from date-picker section and corrects the placeholders for child and day dropdowns.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
         </div>
       </div>
-          <!-- Nav Bar Row -->
+          <!-- First Stab at Nav Bar Row -->
           <!-- <div class="row">
             <div class="col">
               <a href="#Home"></a>Home
@@ -91,6 +91,7 @@
           </div>
         </div>
       </div> -->
+        <!-- New nav bar made with bootstrap -->
         <div class="row">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#"></a>
@@ -206,6 +207,7 @@
             <h1>Hotel</h1>
             <div class="row">
               <div class="col-md-2">Arrival
+                <!-- Lifted Bootstrap code from previous version for date-picker - Possibly throw out later? Container may be redundant-->
                 <div class="container">
                   <div class="row">
                     <div class='col-sm-6'>
@@ -218,15 +220,11 @@
                             </div>
                         </div>
                     </div>
-                    <script type="text/javascript">
-                        $(function () {
-                            $('#datetimepicker1').datetimepicker();
-                        });
-                    </script>
                   </div>
                 </div>
               </div>
               <div class="col-md-2">Going
+                <!-- Lifted Bootstrap code from previous version for date-picker - Possibly throw out later? Container may be redundant-->
                 <div class="container">
                   <div class="row">
                       <div class='col-sm-6'>
@@ -239,11 +237,6 @@
                               </div>
                           </div>
                       </div>
-                      <script type="text/javascript">
-                          $(function () {
-                              $('#datetimepicker1').datetimepicker();
-                          });
-                      </script>
                   </div>
               </div>
               </div>
@@ -279,7 +272,7 @@
               </div>
               <div class="col">Child
                 <div class="input-group">
-                  <input type="text" placeholder="2" class="form-control" aria-label="Text input with dropdown button">
+                  <input type="text" placeholder="1" class="form-control" aria-label="Text input with dropdown button">
                   <div class="input-group-append">
                     <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                     <div class="dropdown-menu">
@@ -294,7 +287,7 @@
               </div>
               <div class="col">Day
                 <div class="input-group">
-                  <input type="text" placeholder="2" class="form-control" aria-label="Text input with dropdown button">
+                  <input type="text" placeholder="1" class="form-control" aria-label="Text input with dropdown button">
                   <div class="input-group-append">
                     <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                     <div class="dropdown-menu">
